// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MatchPlayerSingle > renders correctly a player component with the right data 1`] = `
<DocumentFragment>
  <div
    class="row match-player-single"
  >
    <div
      class="col-sm-1"
    >
      9
    </div>
    <div
      class="col-sm-5"
      data-testid="playerNameSurname"
    >
      test name test surname
    </div>
    <div
      class="col-sm-2"
    >
      <span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-left "
          data-icon="angles-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
            fill="currentColor"
          />
        </svg>
        <label
          class="small"
        >
          9
        </label>
      </span>
      <span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angles-right "
          data-icon="angles-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
            fill="currentColor"
          />
        </svg>
        <label
          class="small"
        >
          19
        </label>
      </span>
    </div>
    <div
      class="col-sm-2"
    >
      <div>
        <img
          alt=""
          height="20"
          src="/assets/img/yellow_card-512.png"
          width="20"
        />
        <label
          class="small"
        >
          10
        </label>
      </div>
    </div>
    <div
      class="col-sm-2"
    >
      <span>
        <img
          alt=""
          height="20"
          src="/assets/img/ball.png"
          width="20"
        />
        <label
          class="small"
        >
          76
        </label>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MatchPlayerSingle renders correctly a player component with the right data 1`] = `
<DocumentFragment>
  <div
    class="row match-player-single"
  >
    <div
      class="col-sm-1"
    >
      9
    </div>
    <div
      class="col-sm-5"
      data-testid="playerNameSurname"
    >
      test name test surname
    </div>
    <div
      class="col-sm-2"
    >
      <span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-left fa-w-14 "
          data-icon="angle-double-left"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
            fill="currentColor"
          />
        </svg>
        <label
          class="small"
        >
          9
        </label>
      </span>
      <span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-angle-double-right fa-w-14 "
          data-icon="angle-double-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
            fill="currentColor"
          />
        </svg>
        <label
          class="small"
        >
          19
        </label>
      </span>
    </div>
    <div
      class="col-sm-2"
    >
      <div>
        <img
          alt=""
          height="20"
          src="/assets/img/yellow_card-512.png"
          width="20"
        />
        <label
          class="small"
        >
          10
        </label>
      </div>
    </div>
    <div
      class="col-sm-2"
    >
      <span>
        <img
          alt=""
          height="20"
          src="/assets/img/ball.png"
          width="20"
        />
        <label
          class="small"
        >
          76
        </label>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
